--- a/templates/html/effective_date/email.html
+++ b/templates/html/effective_date/email.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Medicare Review Opportunity</title>
+  <title>Your Medicare Coverage Anniversary Update</title>
   <style type="text/css">
     /* GLOBAL RESETS */
     body {
@@ -87,7 +87,7 @@
                 <!-- Body Message -->
                 <div class="message">
                   <p>Hi {{ first_name }},</p>
-                  <p>We just reviewed Medigap premiums for your zip code and since it's your birthday month, we may have some intriguing prospects for you.</p>
+                  <p>As your policy anniversary approaches, we just reviewed Medigap premiums for your zip code — and may have some intriguing prospects for you.</p>
                   <p>These plans will provide the same benefits and peace of mind but possibly with more savings. No one likes to shop for a new plan, but a new plan could save you some money, which is why we are doing the leg work and providing you with some options.</p>
                 </div>
                 
